--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/example.ts"]
+  "exclude": ["node_modules", "src/examples"]
 }
